Disable IPv6 forwarding in sysctl.conf

--- a/build-armbian/armbian-files/common-files/etc/sysctl.conf
+++ b/build-armbian/armbian-files/common-files/etc/sysctl.conf
@@ -94,8 +94,8 @@ net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_sack = 1
 net.ipv4.tcp_dsack = 1
 
-net.ipv6.conf.default.forwarding = 1
-net.ipv6.conf.all.forwarding = 1
+net.ipv6.conf.default.forwarding = 0
+net.ipv6.conf.all.forwarding = 0
 
 net.core.rmem_max = 4194304
 net.core.wmem_max = 1048576
@@ -108,5 +108,6 @@ net.netfilter.nf_conntrack_udp_timeout = 60
 net.netfilter.nf_conntrack_udp_timeout_stream = 180
 net.netfilter.nf_conntrack_helper = 1
 
-# net.ipv6.conf.all.disable_ipv6 = 1
-# net.ipv6.conf.all.disable_ipv6 = 1
+net.ipv6.conf.all.disable_ipv6 = 0
+net.ipv6.conf.default.disable_ipv6 = 0
+net.ipv6.conf.default.autoconf = 1
