Update static IP configuration in template

--- a/build-armbian/armbian-files/platform-files/rockchip/bootfs/armbian_first_run.txt.template
+++ b/build-armbian/armbian-files/platform-files/rockchip/bootfs/armbian_first_run.txt.template
@@ -36,9 +36,9 @@ FR_net_wifi_countrycode='GB'
 
 #If you want to use a static ip, set it here
 
-FR_net_use_static=0
-FR_net_static_ip='192.168.0.100'
+FR_net_use_static=1
+FR_net_static_ip='192.168.2.14'
 FR_net_static_mask='255.255.255.0'
-FR_net_static_gateway='192.168.0.1'
-FR_net_static_dns='8.8.8.8 8.8.4.4' #2 entries max, separated by a space.
+FR_net_static_gateway='192.168.2.1'
+FR_net_static_dns='192.168.2.1' #2 entries max, separated by a space.
 #-----------------------------------------------------------------
